sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value by
  for (i<- 1 to getNombreValeurs()) by -1 {
                                    ^AlgBubbleSort1:3: error: Int(1) does not take parameters
  for (i<- 1 to getNombreValeurs()) by -1 {
                                          ^